# anakin

./: .gitignore  Cargo.toml  Makefile  README.org
python/: optimize.in
python/forcefield/: force-field.offxml
scripts/: convert_config.py  target.awk
src/: config.rs  engine.rs  forcefield.rs  lib.rs  main.rs  molecule.rs  objective.rs  optimizer.rs  utils.rs  work_queue.rs
src/config/: default_fns.rs  target.rs
src/forcefield/: utils.rs
src/molecule/: pdb.rs  xyz.rs
src/objective/: penalty.rs
src/optimizer/: optimize.rs  solvers.rs
targets/opt-geo-batch-0/: 18433006-0.sdf  18433007-1.sdf  18433008-2.sdf  18433009-3.sdf  18433010-4.sdf  18433011-5.sdf  18433012-6.sdf  18433013-7.sdf  18433014-8.sdf  18433015-9.sdf  18433016-10.sdf  18433017-11.sdf  18433018-12.sdf  18433019-13.sdf  18433020-14.sdf  18433021-15.sdf  18433022-21.sdf  18433023-19.sdf  18433024-17.sdf  18433025-20.sdf  18433026-16.sdf  18433027-18.sdf  18433029-22.sdf  18433030-25.sdf  18433032-24.sdf  18433033-23.sdf  18433034-26.sdf  18433035-27.sdf  18433036-28.sdf  18433037-29.sdf  optgeo_options.txt
testfiles/: optimize.in  optimize.toml  test.xyz
