[package]
name = "anakin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
serde = { version = "1.0.175", features = ["derive"] }
toml = "0.7.6"

openff-toolkit = { path = "../openff-toolkit" }
env_logger = "0.10.0"
log = "0.4.19"
serde_json = "1.0.104"
tempfile = "3.7.0"

[dev-dependencies]
approx = "0.5.1"
